Version 1.1.0-CVS (?? ??? 2005)
  - Fixed the following bug reports on SourceForge:
      1276729: cal_mod_date/time not stored in GMT
      1276782: icalclient defaults to __public__ permissions
      1246913: cal_status incorrect when publish from iCal
      1276709: week_details.php broke in revision 1.31 and up
      1265900:  exportation to iCal. Newlines should not be escaped per RFC2445
      1265575: Bug in get_all_dates()
      1275972: First day of daily repeat missing
      1272390: publish.php broken in v1.1-CVS
      1259997: repeating events don't send reminder on last day
      1259413: "Check for event conflicts" not working in latest CVS
      1262236: Conflict checking broken in new TZ code
      1261920: "Email all participants" link did not include external users
      1261571: Overriding a conflict when name has double quotes
      1214768: assistants can't see calendar if allow_view_other is N
      1257544: Changing event end date
      1256250: reject_entry.php error
      1254880: the fill in of languages in system settings wrong
      1246969: Clicking on "Add New Entry" was defaulting to
        current date rather than what was passed in via URL
      1254983: nulogin.php throws language errors
      1249012: can't change timed to untimed events
      1233798: Catagory settings don't work quite right for Boss/Assistant
      1250870: repeatly entries for NUCs cannot be deleted correctly
      1245755: Unbalanced span tags
      1204920: Default language is not set correctly to new users
      1245228: Error in db_load_admin() cannot open table
      1245112: Entry will not be displayed properly for "public access"
      1238066: Site Extras in popup problem v1.1.0-CVS
      1244652: nonuser admins can't set prefs & assistants
      1242309: New created user cannot be deleted
      1232617: Views cannot be deleted
      1242843: prefered view will not be properly displayed after Log in