@@ -2824,6 +2824,10 @@ function html_for_event_week_at_a_glance ( $event, $date, $override_class='', $s
     if ( $event->getDuration() > 0 ) {
       $timestr .= "-" . display_time ( $event->getEndDateTime() , $DISPLAY_TZ );
       $end_time = get_time_add_tz($event->getEndTime(), $tz_offset[0]);
+      //this fixes the improper display if an event ends at or after midnight
+      if ( $end_time <  $tz_time ){
+        $end_time += 240000;
+      }
     } else {
       $end_time = 0;
     }
@@ -2972,6 +2976,10 @@ function html_for_event_day_at_a_glance ( $event, $date ) {
       // which slot is end time in? take one off so we don't
       // show 11:00-12:00 as taking up both 11 and 12 slots.
       $end_time = get_time_add_tz($event->getEndTime(), $tz_offset[0]);
+      //this fixes the improper display if an event ends at or after midnight
+      if ( $end_time <  $tz_time ){
+        $end_time += 240000;
+      }			
       $endind = calc_time_slot ( $end_time, true );
       if ( $endind == $ind )
         $rowspan = 0;
